--- a/app.json
+++ b/app.json
@@ -1,12 +1,45 @@
 {
   "pages":[
     "pages/index/index",
+    "pages/list/list",
+    "pages/map/map",
+    "pages/card/card",
+    "pages/create/create",
+"components/custom-nav/custom-nav",
     "pages/logs/logs"
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
-  }
+    "navigationBarBackgroundColor": "#1c819e",
+    "navigationBarTitleText": "SOS",
+    "navigationBarTextStyle":"black",
+
+    "navigationStyle": "custom"
+  },
+    "tabBar": {
+      "backgroundColor": "#1c819e",
+      "borderStyle": "black",
+      "selectedColor": "#ffbe00",
+      "color": "#dfdfdf",
+      "list": [
+        {
+          "pagePath": "pages/list/list",
+          "text": "LIST",
+          "iconPath": "images/list.png",
+          "selectedIconPath": "images/list-selected.png"
+        },
+        {
+          "pagePath": "pages/create/create",
+          "text": "CREATE",
+          "iconPath": "images/create.png",
+          "selectedIconPath": "images/create-selected.png"
+        },
+        {
+          "pagePath": "pages/map/map",
+          "text": "MAP",
+          "iconPath": "images/map.png",
+          "selectedIconPath": "images/map-selected.png"
+        }
+      ]
+    }
 }
