--- a/project.config.json
+++ b/project.config.json
@@ -9,19 +9,16 @@
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"autoAudits": false,
-		"checkInvalidKey": true
+		"autoAudits": false
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.1",
-	"appid": "wx30320794d01669ad",
+	"appid": "wx8b6a1ecf6b7f8ab4",
 	"projectname": "sos-mp",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
-	"isGameTourist": false,
-	"simulatorType": "wechat",
-	"simulatorPluginLibVersion": {},
+	"scripts": {},
 	"condition": {
 		"search": {
 			"current": -1,
@@ -36,11 +33,10 @@
 			"list": []
 		},
 		"game": {
-			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 5,
 			"list": [
 				{
 					"id": -1,
@@ -72,14 +68,16 @@
 				},
 				{
 					"id": -1,
-<<<<<<< HEAD
+					"name": "card",
+					"pathName": "pages/card/card",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
 					"name": "create",
 					"pathName": "pages/create/create",
 					"query": "",
-=======
-					"name": "card",
-					"pathName": "pages/card/card",
->>>>>>> master
 					"scene": null
 				}
 			]
